--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
                         <a href="javascript://" title="xem them" class="xemthem" rel="nofollow">
                             <span>Xem thêm <i class="fa fa-chevron-down"></i></span>
                         </a>
-                        <a href="/kinh-mat-thoi-trang.html" title="Kính mắt" class="thugon">
+                        <a href="javascript://" title="Kính mắt" class="thugon">
                             <span>Xem tất cả <i class="fa fa-angle-right"></i></span>
                         </a>
                     </div>
@@ -37,7 +37,7 @@
                         <a href="javascript://" title="" class="xemthem" rel="nofollow">
                             <span>Xem thêm <i class="fa fa-chevron-down"></i></span>
                         </a>
-                        <a href="/phu-kien-dong-ho.html" title="Phu kien dong ho" class="thugon">
+                        <a href="javascript://" title="Phu kien dong ho" class="thugon">
                             <span>Xem tất cả <i class="fa fa-angle-right"></i></span>
                         </a>
                     </div>
@@ -49,19 +49,19 @@
 <div id="countCate" class="dn dbmobile-l">
     <div class="wrp">
         <div class="group">
-            <a href="/phu-kien-dong-ho.html" title="Phu kien" class="item">
+            <a href="javascript://" title="Phu kien" class="item">
                 <span class="ttu"><b>DÂY ĐỒNG HỒ</b></span>
                 <span><b>178</b></span>
             </a>
-            <a href="/kinh-mat-thoi-trang.html" title="Kinh mat thoi trang" class="item">
+            <a href="javascript://" title="Kinh mat thoi trang" class="item">
                 <span class="ttu "><b>KÍNH MẮT</b></span>
                 <span><b>2.020</b></span>
             </a>
-            <a href="/sp/but-ky-cao-cap.html" title="Bút ký" class="item">
+            <a href="javascript://" title="Bút ký" class="item">
                 <span class="ttu">BÚT KÝ CAO CẤP</span>
                 <span><b>11</b></span>
             </a>
-            <a href="/sp/hop-dung-dong-ho.html" title="Hộp đồng hô" class="item">
+            <a href="javascript://" title="Hộp đồng hô" class="item">
                 <span class="ttu"><b>HỘP ĐỒNG HỒ</b></span>
                 <span><b>34</b></span>
             </a>
@@ -72,32 +72,32 @@
 <div id="logoPartner">
     <div class="wrp">
         <div class="wImage">
-            <a href="/sp/dong-ho-philippe-auguste.html" title="Philippe Auguste" class="image lazy">
+            <a href="javascript://" title="Philippe Auguste" class="image lazy">
                 <img data-src="/view/img/PA.jpg" alt="Philippe Auguste" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
         <div class="wImage">
-            <a href="/sp/dong-ho-atlantic-swiss.html" title="Atlantic Swiss" class="image">
+            <a href="javascript://" title="Atlantic Swiss" class="image">
                 <img data-src="/view/img/Atlatic.jpg" alt="Atlantic Swiss" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
         <div class="wImage">
-            <a href="/sp/dong-ho-diamond-d.html" title="Diamond D" class="image">
+            <a href="javascript://" title="Diamond D" class="image">
                 <img data-src="/view/img/DiamondD.jpg" alt="Diamond D" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
         <div class="wImage">
-            <a href="/sp/dong-ho-jacques-lemans.html" title="Jacques Lemans" class="image">
+            <a href="javascript://" title="Jacques Lemans" class="image">
                 <img data-src="/view/img/Jacques.jpg" alt="Jacques Lemans" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
         <div class="wImage">
-            <a href="/sp/dong-ho-aries-gold.html" title="Aries Gold" class="image">
+            <a href="javascript://" title="Aries Gold" class="image">
                 <img data-src="/view/img/AriesGold.jpg" alt="Aries Gold" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
         <div class="wImage">
-            <a href="/sp/dong-ho-epos-swiss.html" title="Epos Swiss" class="image">
+            <a href="javascript://" title="Epos Swiss" class="image">
                 <img data-src="/view/img/Epos.jpg" alt="Epos Swiss" class="lazy" src="/view/lazy.jpg">
             </a>
         </div>
@@ -106,7 +106,7 @@
 <div class="product">
     <div class="wrp">
         <h2 class="titleCate">
-            <a href="/sp/dong-ho-philippe-auguste.html" title="Philippe August">
+            <a href="javascript://" title="Philippe August">
                     <span class="icon"><img data-src="/view/img/icon1.png" alt="Philippe August" class="lazy"
                                             src="/view/lazy.jpg"/></span>
                 PHILIPPE AUGUSTE
@@ -120,7 +120,7 @@
 <div class="product pb20">
     <div class="wrp">
         <h2 class="titleCate">
-            <a href="/sp/dong-ho-diamond-d.html" title="Diamond D">
+            <a href="javascript://" title="Diamond D">
                     <span class="icon">
                         <img data-src="/view/img/icon1.png" alt="Diamond D" class="lazy"
                                             src="/view/lazy.jpg"/>
@@ -137,21 +137,21 @@
     <div class="wrp">
         <div class="bannerMain">
             <div class="wImage dnTablet-l">
-                <a href="/sp/dong-ho-epos-swiss.html" title="EPos Swiss" class="image cover">
+                <a href="javascript://" title="EPos Swiss" class="image cover">
                     <img data-src="/view/img/EP246.jpg" class="lazy" src="/view/lazy.jpg"/>
                 </a>
             </div>
             <div class="wImage dn dbtablet-l">
-                <a href="/sp/dong-ho-epos-swiss.html" title="Epos" class="image cover">
+                <a href="javascript://" title="Epos" class="image cover">
                     <img data-src="/view/img/EP246M.jpg" class="lazy" src="/view/lazy.jpg"/>
                 </a>
             </div>
             <h2 class="info">
-                <a href="/sp/dong-ho-epos-swiss.html" title="Epos Swiss" class="name">
+                <a href="javascript://" title="Epos Swiss" class="name">
                     <span>Đồng hồ Thụy Sỹ</span> <span class="dn dbtablet-l"> </span>
                     <span>Epos Swiss</span>
                 </a>
-                <a href="/sp/dong-ho-epos-swiss.html" title="Epos Swiss" class="viewAll">Xem tất cả <i
+                <a href="javascript://" title="Epos Swiss" class="viewAll">Xem tất cả <i
                         class="fa fa-chevron-right"></i></a>
             </h2>
         </div>
@@ -163,7 +163,7 @@
 <div class="product pt10">
     <div class="wrp">
         <h2 class="titleCate">
-            <a href="/sp/dong-ho-jacques-lemans.html" title="jacques lemans">
+            <a href="javascript://" title="jacques lemans">
                 <span class="icon"><img data-src="/view/img/icon1.png" class="lazy" src="/view/lazy.jpg"/></span>
                 JACQUES LEMANS
             </a>
@@ -176,7 +176,7 @@
 <div class="product pb20">
     <div class="wrp">
         <h2 class="titleCate">
-            <a href="/sp/dong-ho-aries-gold.html" title="Aries Gold" class="">
+            <a href="javascript://" title="Aries Gold" class="">
                 <span class="icon"><img data-src="/view/img/icon1.png" alt="AG" class="lazy" src="/view/lazy.jpg"/></span>
                 ĐỒNG HỒ ARIES GOLD
             </a>
@@ -190,21 +190,21 @@
     <div class="wrp">
         <div class="bannerMain">
             <div class="wImage dnTablet-l">
-                <a href="/sp/dong-ho-atlantic-swiss.html" title="Atlantic Swiss" class="image cover">
+                <a href="javascript://" title="Atlantic Swiss" class="image cover">
                     <img data-src="/view/img/AT1.jpg" alt="Atlantic" class="lazy" src="/view/lazy.jpg"/>
                 </a>
             </div>
             <div class="wImage dn dbtablet-l">
-                <a href="/sp/dong-ho-atlantic-swiss.html" title="Epos" class="image cover">
+                <a href="javascript://" title="Epos" class="image cover">
                     <img data-src="/view/img/AT2.jpg" alt="Atlantic" class="lazy" src="/view/lazy.jpg"/>
                 </a>
             </div>
             <h3 class="info">
-                <a href="/sp/dong-ho-atlantic-swiss.html" title="Atlantic Swiss" class="name">
+                <a href="javascript://" title="Atlantic Swiss" class="name">
                     <span>Đồng hồ Thụy Sỹ</span> <span class="dn dbtablet-l"> </span>
                     <span>Atlantic Swiss</span>
                 </a>
-                <a href="/sp/dong-ho-atlantic-swiss.html" title="Atlantic Swiss" class="viewAll">Xem tất cả <i
+                <a href="javascript://" title="Atlantic Swiss" class="viewAll">Xem tất cả <i
                         class="fa fa-chevron-right"></i></a>
             </h3>
         </div>
