--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1069,7 +1069,7 @@
                                  style="overflow: hidden; width: auto; height: 250px;">
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="http://localhost:8000/dist/img/user4-128x128.jpg" alt="user image"
+                                    <img th:src="@{/dist/img/user4-128x128.jpg}" alt="user image"
                                          class="online">
 
                                     <p class="message">
@@ -1098,7 +1098,7 @@
                                 <!-- /.item -->
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="http://localhost:8000/dist/img/user3-128x128.jpg" alt="user image"
+                                    <img th:src="@{/dist/img/user3-128x128.jpg}" alt="user image"
                                          class="offline">
 
                                     <p class="message">
@@ -1115,7 +1115,7 @@
                                 <!-- /.item -->
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="http://localhost:8000/dist/img/user2-160x160.jpg" alt="user image"
+                                    <img th:src="@{/dist/img/user2-128x128.jpg}" alt="user image"
                                          class="offline">
 
                                     <p class="message">
