--- a/src/main/resources/templates/fragments/admin/footer.html
+++ b/src/main/resources/templates/fragments/admin/footer.html
@@ -46,6 +46,7 @@
 <script th:src="@{/view/js/pages/dashboard.js}"></script>
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/view/js/demo.js}"></script>
+<script th:src="@{/view/js/script.js}"></script>
 <script src="//cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
 <script>
     CKEDITOR.replace('content', {
