--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -11,12 +11,12 @@
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">Thanh điều hướng</li>
 
-            <li class="">
+            <li>
                 <a th:href="@{/admin/transaction}">
                     <i class="fa fa-money"></i> <span>Đơn hàng</span>
                 </a>
             </li>
-            <li class="">
+            <li>
                 <a th:href="@{/admin/category}">
                     <i class="fa fa-files-o"></i>
                     <span>Danh mục</span>
@@ -27,13 +27,18 @@
                     <i class="fa fa-th"></i> <span>Sản phẩm</span>
                 </a>
             </li>
-            <li class="">
+            <li>
+                <a th:href="@{/admin/keyword}">
+                    <i class="fa fa-th"></i> <span>Từ khóa</span>
+                </a>
+            </li>
+            <li>
                 <a th:href="@{/admin/qtv}">
                     <i class="fa fa-user"></i>
                     <span>Quản trị viên</span>
                 </a>
             </li>
-            <li class="">
+            <li>
                 <a th:href="@{/admin/user}">
                     <i class="fa fa-user"></i>
                     <span>Người dùng</span>
