--- a/src/main/resources/templates/admin/categories/create.html
+++ b/src/main/resources/templates/admin/categories/create.html
@@ -2,40 +2,48 @@
 <div class="wrapper">
     <div th:replace="/fragments/admin/header :: header"></div>
     <div th:replace="/fragments/admin/sidebar :: aside"></div>
-    <div class="content-wrapper" style="min-height: 902.55px;">
+    <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                [[#{create}]] [[#{category}]]
+                Thêm mới danh mục sản phẩm
             </h1>
             <ol class="breadcrumb">
-                <li><a th:href="@{'/admin'}"><i class="fa fa-dashboard"></i>[[#{home}]]</a></li>
-                <li><a th:href="@{'/admin/categorys'}"><i class="fa fa-dashboard"></i>[[#{category}]]</a></li>
-                <li class="active">[[#{create}]]</li>
+                <li><a th:href="@{'/admin'}"> Home</a></li> >
+                <li><a th:href="@{'/admin/category'}">Category</a></li>
+                >
+                <li><a href="#">Add</a></li>
             </ol>
         </section>
 
         <!-- Main content -->
         <section class="content">
-            <form th:action="@{'/admin/category/save'}" method="post" th:object="${category}" class="col-md-8">
-                <div class="form-group">
-                    <label for="name">[[#{name}]]</label>
-                    <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="Enter name">
+            <form th:action="@{'/admin/category/save'}" method="POST" role="form" class="col-md-8" th:object="${categoryDto}">
+                <div th:class="${#fields.hasErrors('c_name')} ? 'has-error form-group' : 'form-group'">
+                    <label for="exampleInputEmail1">Danh mục</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" th:field="*{c_name}"
+                           aria-describedby="emailHelp">
+                    <p th:if="${#fields.hasErrors('c_name')}" class="text-danger" th:errors="*{c_name}"></p>
                 </div>
-                <div class="form-group">
-                    <label for="type">[[#{type}]]</label>
-                    <select th:field="*{type}" class="form-control" id="type">
+                <div th:class="${#fields.hasErrors('c_cate')} ? 'has-error form-group' : 'form-group'">
+
+                    <label for="exampleInputPassword1">Thể loại</label>
+                    <select class="form-control" id="exampleInputPassword1" th:field="*{c_cate}">
                         <option value="">--Chọn thể loại sản phẩm--</option>
-                        <option value="0">Đồng hồ chính hãng</option>
-                        <option value="1">Kính mắt thời trang</option>
-                        <option value="2">Phụ kiện đồng hồ</option>
+                        <option value="watch">Áo bóng đá</option>
+                        <option value="glass">Giày bóng đá</option>
+                        <option value="accessories">Phụ kiện bóng đá</option>
+
                     </select>
+                    <p th:if="${#fields.hasErrors('c_cate')}" class="text-danger" th:errors="*{c_cate}"></p>
                 </div>
-                <button type="submit" class="btn btn-primary">[[#{submit}]]</button>
-                <a th:href="@{'/admin/categories'}" class="btn btn-danger">[[#{back}]]</a>
+                <a th:href="@{'/admin/category'}" class="btn btn-danger"><i class="fa fa-undo"></i> Quay lại</a>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Thêm</button>
             </form>
+
         </section>
         <!-- /.content -->
     </div>
-</div>
+    </div>
+    <!-- /.content-wrapper -->
 <div th:include="/fragments/admin/footer"></div>
