--- a/src/main/resources/templates/admin/keywords/index.html
+++ b/src/main/resources/templates/admin/keywords/index.html
@@ -2,22 +2,23 @@
 <div class="wrapper">
     <div th:replace="/fragments/admin/header :: header"></div>
     <div th:replace="/fragments/admin/sidebar :: aside"></div>
-    <div class="content-wrapper" style="min-height: 902.55px;">
+    <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
                 [[#{keyword}]]
-                <a th:href="@{'/admin/keyword/create'}" class="btn btn-primary">[[#{create}]]</a>
+                <small><a th:href="@{'/admin/keyword/create'}" class="btn btn-primary">Thêm mới</a></small>
             </h1>
             <ol class="breadcrumb">
-                <li><a th:href="@{'/admin'}"><i class="fa fa-dashboard"></i>[[#{home}]]</a></li>
+                <li><a th:href="@{'/admin/keyword'}"><i class="fa fa-dashboard"></i>Trang chủ</a></li>
                 <li class="active">[[#{keyword}]]</li>
             </ol>
-            <div th:if="${message}" class="alert alert-success text-center mt-3">[[${message}]]</div>
+            <!-- <div th:if="${message}" class="alert alert-success text-center mt-3">[[${message}]]</div> -->
         </section>
 
         <!-- Main content -->
         <section class="content">
+            <div class="col-md-12">
             <table class="table text-center">
                 <thead>
                 <tr>
@@ -31,8 +32,8 @@
                     <th colspan="3">[[#{no_result_found}]]</th>
                 </tr>
                 <tr th:each="keyword : ${keywords}">
-                    <td>[[${keywordStat.index + 1}]]</td>
-                    <td>[[${keyword.name}]]</td>
+                    <td>[[${((currentPage - 1) * 10) + keywordStat.index + 1}]]</td>
+                    <td>[[${keyword.k_name}]]</td>
                     <td>
                         <a th:href="@{'/admin/keyword/edit/' + ${keyword.id}}" class="btn btn-secondary"><i class="fa fa-edit"></i> [[#{edit}]]</a>
                         <a th:href="@{'/admin/keyword/delete/' + ${keyword.id}}" class="btn btn-secondary"><i class="fa fa-trash text-danger"></i> [[#{delete}]]</a>
@@ -40,9 +41,11 @@
                 </tr>
                 </tbody>
             </table>
-            <div th:include="/fragments/user/pagination"></div>
-        </section>
-        <!-- /.content -->
-    </div>
+        </div>
+        <div class="box-footer" th:include="/fragments/user/pagination">
+        </div>
+    </section>
+    <!-- /.content -->
 </div>
+<!-- /.content-wrapper -->
 <div th:include="/fragments/admin/footer"></div>
