--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -2,31 +2,34 @@
 <div class="wrapper">
     <div th:replace="/fragments/admin/header :: header"></div>
     <div th:replace="/fragments/admin/sidebar :: aside"></div>
-    <div class="content-wrapper" style="min-height: 902.55px;">
+    <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
                 [[#{product}]]
-                <a th:href="@{'/admin/product/create'}" class="btn btn-primary">[[#{create}]]</a>
+                <small><a th:href="@{'/admin/product/create'}" class="btn btn-primary">Thêm mới</a></small>
             </h1>
             <ol class="breadcrumb">
-                <li><a th:href="@{'/admin'}"><i class="fa fa-dashboard"></i>[[#{home}]]</a></li>
-                <li class="active">[[#{product}]]</li>
+                <li><a th:href="@{'/admin/product'}" ><i class="fa fa-dashboard"></i> Trang chủ</a></li>
+                <li class="active"> [[#{product}]]</li>
             </ol>
-            <div th:if="${message}" class="alert alert-success text-center mt-3">[[${message}]]</div>
+            <!-- <div th:if="${message}" class="alert alert-success text-center mt-3">[[${message}]]</div> -->
         </section>
 
         <!-- Main content -->
         <section class="content">
+            <div class="col-md-12">
             <table class="table text-center">
                 <thead>
                 <tr>
                     <td>#</td>
                     <td>[[#{name}]]</td>
                     <td>[[#{price}]]</td>
-                    <td>[[#{sale}]]</td>
+                    <td>[[#{sale}]](%)</td>
                     <td>[[#{type}]]</td>
                     <td>[[#{avatar}]]</td>
+                    <td>Hot</td>
+                    <td>Active</td>
                     <td>Pay</td>
                     <td>View</td>
                     <td>Action</td>
@@ -37,14 +40,26 @@
                     <th colspan="9">[[#{no_result_found}]]</th>
                 </tr>
                 <tr th:each="product : ${products}">
-                    <td>[[${productStat.index + 1}]]</td>
-                    <td>[[${product.name}]]</td>
-                    <td>[[${product.price}]]</td>
-                    <td>[[${product.sale}]]</td>
-                    <td>[[${product.type}]]</td>
-                    <td>[[${product.avatar}]]</td>
-                    <td>[[${product.pay}]]</td>
-                    <td>[[${product.view}]]</td>
+                    <td>[[${((currentPage - 1) * 10) + productStat.index + 1}]]</td>
+                    <td>[[${product.pro_name}]]</td>
+                    <td>[[${@commonConfigurations.formatPrice(product.pro_price, 0, 0)}]]</td>
+                    <td>[[${product.pro_sale}]]</td>
+                    <td>[[${product.category.c_name}]]</td>
+                    <td><img th:src="${product.pro_avatar}" th:alt="${product.pro_name}" style="height: 50px;width: 50px" class="lazy"/></td>
+                    <td th:if="${product.pro_hot == 1}">
+                        <a th:href="@{'/admin/product/hot/' + ${product.id}}" class="btn btn-primary">Hot</a>
+                    </td>
+                    <td th:if="${product.pro_hot == 0}">
+                        <a th:href="@{'/admin/product/hot/' + ${product.id}}" class="btn btn-success">None</a>
+                    </td>
+                    <td th:if="${product.pro_active == 1}">
+                        <a th:href="@{'/admin/product/active/' + ${product.id}}" class="btn btn-primary">Active</a>
+                    </td>
+                    <td th:if="${product.pro_active == 0}">
+                        <a th:href="@{'/admin/product/active/' + ${product.id}}" class="btn btn-success">None</a>
+                    </td>
+                    <td>[[${product.pro_pay}]]</td>
+                    <td>[[${product.pro_view}]]</td>
                     <td>
                         <a th:href="@{'/admin/product/edit/' + ${product.id}}" class="btn btn-secondary"><i class="fa fa-edit"></i> [[#{edit}]]</a>
                         <a th:href="@{'/admin/product/delete/' + ${product.id}}" class="btn btn-secondary"><i class="fa fa-trash text-danger"></i> [[#{delete}]]</a>
@@ -52,9 +67,12 @@
                 </tr>
                 </tbody>
             </table>
-            <div th:include="/fragments/user/pagination"></div>
-        </section>
-        <!-- /.content -->
+        </div>
+        <div class="box-footer" th:include="/fragments/user/pagination">
+        </div>
+    </section>
+    <!-- /.content -->
     </div>
-</div>
+    </div>
+<!-- /.content-wrapper -->
 <div th:include="/fragments/admin/footer"></div>
