--- a/src/main/resources/templates/fragments/admin/layout.html
+++ b/src/main/resources/templates/fragments/admin/layout.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <title>[[${title}]]</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
@@ -31,6 +32,7 @@
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css}">
 
     <link rel="stylesheet" th:href="@{/plugins/select2/dist/css/select2.min.css}"/>
+    <link rel="stylesheet" th:href="@{/view/css/style.css}"/>
     <!-- Google Font -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
