--- a/src/main/resources/templates/fragments/user/pagination.html
+++ b/src/main/resources/templates/fragments/user/pagination.html
@@ -7,20 +7,20 @@
             <a class="page-link" href="javascript:;" tabindex="-1">Previous</a>
         </li>
         <li class="page-item" th:if="${currentPage != 0}">
-            <a class="page-link" th:href="@{'/admin/' + ${models} + '?page=' + ${currentPage - 1}}" tabindex="-1">Previous</a>
+            <a class="page-link" th:href="@{'/admin/' + ${models} + '?page=' + ${currentPage}}" tabindex="-1">Previous</a>
         </li>
         <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}" >
-            <a class="page-link" th:href="@{'/admin/' + ${models} + '?page=' + ${i - 1}}" th:if="${currentPage != i - 1}">
+            <a class="page-link" th:href="@{'/admin/' + ${models} + '?page=' + ${i}}" th:if="${currentPage != i}">
                 [[${i}]]
             </a>
-            <a class="page-link active" href="javascript:;" th:if="${currentPage == i - 1}">
+            <a class="page-link active" href="javascript:;" th:if="${currentPage == i}">
                 [[${i}]]
             </a>
         </li>
-        <li class="page-item disabled" th:if="${currentPage == totalPages - 1}">
+        <li class="page-item disabled" th:if="${currentPage == totalPages}">
             <a class="page-link" href="javascript:;" >Next</a>
         </li>
-        <li class="page-item" th:if="${currentPage < totalPages - 1}">
+        <li class="page-item" th:if="${currentPage < totalPages}">
             <a class="page-link" th:href="@{'/admin/' + ${models} + '?page=' + ${currentPage + 1}}">Next</a>
         </li>
     </ul>
