--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -63,7 +63,7 @@
                         <div class="icon">
                             <i class="ion ion-person-add"></i>
                         </div>
-                        <a th:href="@{'/admin/users'}" class="small-box-footer">Chi tiết <i
+                        <a th:href="@{'/admin/user'}" class="small-box-footer">Chi tiết <i
                                     class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
