--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -1,4 +1,5 @@
 <div th:include="/fragments/user/header"></div>
+<link th:href="@{/view/css/login.css}" rel="stylesheet"/>
 <title>Đăng ký</title>
 <div class="container"><br>
     <div class="login">
